# ccsds-rs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ccsds.h  ccsds_rs_decoder.cc  ccsds_rs_decoder.h  ccsds_rs_encoder.cc  ccsds_rs_encoder.h  correlator.cc  correlatorl.h  main.cc  reed_solomon.cc  reed_solomon.h  run_all.sh
cc_soft/: CMakeLists.txt  viterbi27.c  viterbi27.h
conf/: config.txt  config_only_cc.txt  config_only_cc_rate_2_3.txt  config_only_cc_rate_3_4.txt  config_only_cc_rate_5_6.txt  config_only_cc_rate_7_8.txt  config_only_rs.txt  config_rs_and_cc.txt  config_rs_and_cc_rate_2_3.txt  config_rs_and_cc_rate_3_4.txt  config_rs_and_cc_rate_5_6.txt  config_rs_and_cc_rate_7_8.txt  modconfig_only_cc_rate_1_2.txt  modconfig_only_cc_rate_5_6.txt  modconfig_only_rs.txt  modconfig_rs_and_cc_rate_1_2.txt
conf/mod/: modconfig_only_cc_rate_2_3.txt  modconfig_only_cc_rate_7_8.txt
matlab/: tb_plotber.m
